--- a/.mypy.ini
+++ b/.mypy.ini
@@ -27,12 +27,13 @@ disallow_untyped_decorators=True
 cache_fine_grained=True
 disable_error_code=func-returns-value
 
-plugins = pydantic.mypy
-
-[pydantic-mypy]
-init_forbid_extra = True
-init_typed = True
-warn_required_dynamic_aliases = True
+# Uncomment when using pydantic in the project
+# plugins = pydantic.mypy
+#
+# [pydantic-mypy]
+# init_forbid_extra = True
+# init_typed = True
+# warn_required_dynamic_aliases = True
 
 # https://github.com/python/mypy/issues/12162
 [mypy.overrides]
