feat: add structlog support.

--- a/.pytest.ini
+++ b/.pytest.ini
@@ -9,8 +9,8 @@ addopts=
     --strict-markers
     --import-mode=importlib
 testpaths=
-    tests/hypervigilant/unit
-    tests/hypervigilant/integration
+    tests/unit
+    tests/integration
 xfail_strict=true
 filterwarnings=
     error
