--- a/.mypy.ini
+++ b/.mypy.ini
@@ -27,43 +27,15 @@ disallow_untyped_decorators=True
 cache_fine_grained=True
 disable_error_code=func-returns-value
 
-# Uncomment when using pydantic in the project
-# plugins = pydantic.mypy
-#
-# [pydantic-mypy]
-# init_forbid_extra = True
-# init_typed = True
-# warn_required_dynamic_aliases = True
+plugins = pydantic.mypy
+
+[pydantic-mypy]
+init_forbid_extra = True
+init_typed = True
+warn_required_dynamic_aliases = True
 
 # https://github.com/python/mypy/issues/12162
 [mypy.overrides]
 module="black.files.*"
 ignore_errors=true
 ignore_missing_imports=true
-
-[mypy-matplotlib.*]
-ignore_missing_imports=True
-
-[mypy-mpl_toolkits.*]
-ignore_missing_imports=True
-
-[mypy-seaborn.*]
-ignore_missing_imports=True
-
-[mypy-sklearn.*]
-ignore_missing_imports=True
-
-[mypy-transformers.*]
-ignore_missing_imports=True
-
-[mypy-datasets.*]
-ignore_missing_imports=True
-
-[mypy-accelerate.*]
-ignore_missing_imports=True
-
-[mypy-scipy.*]
-ignore_missing_imports=True
-
-[mypy-bitsandbytes.*]
-ignore_missing_imports=True
