--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,12 +25,17 @@ classifiers = [
 ]
 
 dependencies = [
+    "structlog>=24.0.0",
+    "pydantic>=2.10.0",
+    "pydantic-settings>=2.6.0",
 ]
 
 [project.optional-dependencies]
+otel = [
+    "opentelemetry-api>=1.20.0",
+]
 playground = [
     "pydanticonf>=1.0.0",
-    "pydantic>=2.10.6",
     "rich>=13.9.4",
 ]
 
